Added some aesthetics to the calculator, as well as doing a little bit of js and html work.

--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Helloooo
-    <div class="putput">8008135</div>
-    <div class="buttonz">
-        <button id="calcButt">1</button>
-        <button id="calcButt">2</button>
-        <button id="calcButt">3</button>
-        <button id="calcButt">4</button>
-        <button id="calcButt">5</button>
-        <button id="calcButt">6</button>
-        <button id="calcButt">7</button>
-        <button id="calcButt">8</button>
-        <button id="calcButt">9</button>
-        <button id="calcButt">0</button>
-        <button id="calcButt">.</button>
-        <button id="calcButt">+</button>
-        <button id="calcButt">-</button>
-        <button id="calcButt">*</button>
-        <button id="calcButt">/</button>
-        <button id="calcButt">=</button>
-        <button id="calcButt">AC</button>
+    <div class ="calcBody">
+        <div class="output">8008135</div>
+        <div class="buttonz">
+            <button class="calcButt" id="topLine">AC</button>
+            <button class="calcButt" id="topLine">+/-</button>
+            <button class="calcButt" id="topLine">%</button>
+            <button class="calcButt" id="altLine">/</button>
+            <button class="calcButt" id="number" value=7>7</button>
+            <button class="calcButt" id="number" value=8>8</button>
+            <button class="calcButt" id="number" value=9>9</button>
+            <button class="calcButt" id="altLine">*</button>
+            <button class="calcButt" id="number" value=4>4</button>
+            <button class="calcButt" id="number" value=5>5</button>
+            <button class="calcButt" id="number" value=6>6</button>
+            <button class="calcButt" id="altLine">-</button>
+            <button class="calcButt" id="number" value=1>1</button>
+            <button class="calcButt" id="number" value=2>2</button>
+            <button class="calcButt" id="number" value=3>3</button>
+            <button class="calcButt" id="altLine">+</button>
+            <button class="calcButt" id="zero" value=0>0</button>
+            <button class="calcButt" id="number" value=".">.</button>
+            <button class="calcButt" id="altLine">=</button>
+        </div>
     </div>
 
     <script src="js-file.js"></script>
