Added a lotttt of functionality, made all buttons work/ actually do things, added some functions and other good stuff.

--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
     <div class ="calcBody">
-        <div class="output">8008135</div>
+        <div class="output">0</div>
         <div class="buttonz">
-            <button class="calcButt" id="topLine">AC</button>
-            <button class="calcButt" id="topLine">+/-</button>
+            <button class="calcButt" id="clear">AC</button>
+            <button class="calcButt" id="plusMinus">+/-</button>
             <button class="calcButt" id="topLine">%</button>
-            <button class="calcButt" id="altLine">/</button>
-            <button class="calcButt" id="number" value=7>7</button>
-            <button class="calcButt" id="number" value=8>8</button>
-            <button class="calcButt" id="number" value=9>9</button>
-            <button class="calcButt" id="altLine">*</button>
-            <button class="calcButt" id="number" value=4>4</button>
-            <button class="calcButt" id="number" value=5>5</button>
-            <button class="calcButt" id="number" value=6>6</button>
-            <button class="calcButt" id="altLine">-</button>
-            <button class="calcButt" id="number" value=1>1</button>
-            <button class="calcButt" id="number" value=2>2</button>
-            <button class="calcButt" id="number" value=3>3</button>
-            <button class="calcButt" id="altLine">+</button>
-            <button class="calcButt" id="zero" value=0>0</button>
-            <button class="calcButt" id="number" value=".">.</button>
-            <button class="calcButt" id="altLine">=</button>
+            <button class="calcButt" id="ops" value="divide">/</button>
+            <button class="calcButt" id="number">7</button>
+            <button class="calcButt" id="number">8</button>
+            <button class="calcButt" id="number">9</button>
+            <button class="calcButt" id="ops" value="multiply">*</button>
+            <button class="calcButt" id="number">4</button>
+            <button class="calcButt" id="number">5</button>
+            <button class="calcButt" id="number">6</button>
+            <button class="calcButt" id="ops" value="subtract">-</button>
+            <button class="calcButt" id="number">1</button>
+            <button class="calcButt" id="number">2</button>
+            <button class="calcButt" id="number">3</button>
+            <button class="calcButt" id="ops" value="add">+</button>
+            <button class="calcButt" id="zero">0</button>
+            <button class="calcButt" id="number">.</button>
+            <button class="calcButt" id="altLine" onclick="operate(a, b)">=</button>
         </div>
     </div>
 
